Removed deprecated API usage